@@ -54,7 +54,6 @@ class ATCTTypeTestCase(ATCTSiteTestCase):
     """
 
     klass = None
-    cmf_klass = None
     portal_type = ''
     cmf_portal_type = ''
     title = ''
@@ -63,8 +62,6 @@ class ATCTTypeTestCase(ATCTSiteTestCase):
     def afterSetUp(self):
         #self.setRoles(['Manager', 'Member'])
         self._ATCT = self._createType(self.folder, self.portal_type, 'ATCT')
-        if self.cmf_klass:
-            self._cmf = self._createType(self.folder, self.cmf_portal_type, 'cmf')
 
     def _createType(self, context, portal_type, id, **kwargs):
         """Helper method to create a new type
@@ -85,29 +82,17 @@ class ATCTTypeTestCase(ATCTSiteTestCase):
         self.failUnless(self.portal_type)
         self.failUnless(self.title)
         self.failUnless(self.meta_type)
-        if self.cmf_klass:
-            self.failUnless(self.cmf_klass)
-            self.failUnless(self.cmf_portal_type)
 
         # portal types
         self.failUnlessEqual(self._ATCT.portal_type, self.portal_type)
-        if self.cmf_klass:
-            self.failUnlessEqual(self._cmf.portal_type, self.cmf_portal_type)
 
         # classes
         atct_class = self._ATCT.__class__
         self.failUnlessEqual(self.klass, atct_class)
-        if self.cmf_klass:
-            cmf_class = self._cmf.__class__
-            self.failUnlessEqual(self.cmf_klass, cmf_class)
 
     def test_dcEdit(self):
         new = self._ATCT
         dcEdit(new)
-        if self.cmf_klass:
-            old = self._cmf
-            dcEdit(old)
-            self.compareDC(old, new)
 
     def test_typeInfo(self):
         ti = self._ATCT.getTypeInfo()
